# GMACHIE-

./: .gitignore  README.md  main.py  package-lock.json  package.json  render.yaml  requirements.txt  vercel.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agents/: analytics_agent.py  channel_email_agent.py  channel_linkedin_agent.py  channel_x_agent.py  content_agent.py  research_agent.py  strategy_agent.py
backend/core/: agent.py  llm.py  orchestrator.py  state_store.py
backend/integrations/: convex_client.py  email_client.py  linkedin_client.py  x_client.py
convex/: http.ts  schema.ts
convex/mutations/: createCampaign.ts  createContent.ts  createMetric.ts  logAgentRun.ts  updateCampaign.ts  updateContent.ts
convex/queries/: getCampaign.ts  getCampaignAgentRuns.ts  getCampaignContent.ts  getCampaignMetrics.ts  listCampaigns.ts
frontend/: .env.local.example  .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: AgentLog.tsx  AgentPipeline.tsx  ContentMatrix.tsx  MetricsPanel.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  mockData.ts  types.ts
frontend/src/pages/: _document.tsx  index.tsx
frontend/src/pages/campaign/: [id].tsx
frontend/src/styles/: globals.css
scripts/: fix_convex_imports.py  fix_imports.py  get_linkedin_token.py
