[project]
name = "gmachie-backend"
version = "0.1.0"
description = "GMACHIE Agentic GTM Machine Backend"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.21.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "tweepy>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]